--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,13 @@ button:focus-visible {
   }
 }
 
+@media (max-width:768px) {
+  body {
+    justify-content: center;
+  }
+  
+}
+
 /* sidebar */
 .sidebar {
   height: 100vh;
